SERVER-87119: use the shard_role acquisition API for validate (#39818)

GitOrigin-RevId: 352f8c1c8c46540d97ee0285086b8321cc85c9a1